262578989263/Games/templates/networkpolicy-allow-gateway-to-kuma-3001.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-kuma-3001
  namespace: gamestest
  labels:
    app.kubernetes.io/name: allow-gateway-to-kuma-3001
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: Kuma
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra
      ports:
        - protocol: TCP
          port: 3001
